src/FinancialForce Accounting/objects/CancelPayment__c.object
<CustomObject>
    <customHelpPage>codahelpcancelpaymentcontrol</customHelpPage>
    <description>Provides the ability to show the failures when there is a problem executing a cancel payment</description>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipName>Cancel_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cancel Payment Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BatchProcess__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cancel Payment Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancel Payment Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>